created docker and docker-compose files

--- a/NS-Backend/pom.xml
+++ b/NS-Backend/pom.xml
@@ -64,5 +64,6 @@
                 </configuration>
             </plugin>
         </plugins>
+        <finalName>ns-backend-docker</finalName>
     </build>
 </project>
