--- a/NS-Backend/pom.xml
+++ b/NS-Backend/pom.xml
@@ -14,7 +14,7 @@
     <name>NS-Backend</name>
     <description>NS-Backend</description>
     <properties>
-        <java.version>19</java.version>
+        <java.version>1.8.0_341</java.version>
     </properties>
     <dependencies>
         <dependency>
