--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -24,7 +24,7 @@ jobs:
         cache: maven
 
     - name: Build with Maven
-      run: mvn clean install --file ./NS-Backend/pom.xml
+      run: mvn clean install --file NS-Backend/pom.xml
 
      
     - name: Build & push Docker image
