--- a/User-Backend/pom.xml
+++ b/User-Backend/pom.xml
@@ -64,6 +64,7 @@
                 </configuration>
             </plugin>
         </plugins>
+        <finalName>user-backend-docker</finalName>
     </build>
 
 </project>
