--- a/User-Backend/src/main/resources/application.properties
+++ b/User-Backend/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/userdatabase?useSSL=false
+spring.datasource.hikari.initialization-fail-timeout=0
 spring.datasource.username=root
 spring.datasource.password=root
 server.port=9090
