--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -15,7 +15,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
+    - name: Check Out Repository
+      uses: actions/checkout@v3
+
     - name: Set up JDK 19
       uses: actions/setup-java@v3
       with:
@@ -23,16 +25,29 @@ jobs:
         distribution: 'temurin'
         cache: maven
 
-    - name: Build with Maven
+    - name: Build NS-Backend with Maven
       run: mvn clean install --file NS-Backend/pom.xml
+    
+    - name: Build User-Backend with Maven
+      run: mvn clean install --file User-Backend/pom.xml
 
      
     - name: Build & push Docker image
       uses: mr-smithers-excellent/docker-build-push@v5
       with:
         image: jesseleppens/ns-backend
-        tags: v1, latest
+        tags: latest
         registry: docker.io
         dockerfile: NS-Backend/Dockerfile
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+
+    - name: Build & push Docker image
+      uses: mr-smithers-excellent/docker-build-push@v5
+      with:
+        image: jesseleppens/ns-backend
+        tags: latest
+        registry: docker.io
+        dockerfile: User-Backend/Dockerfile
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
