--- a/User-Backend/src/main/resources/application.properties
+++ b/User-Backend/src/main/resources/application.properties
@@ -7,3 +7,7 @@ server.port=9090
 #hibernate
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto=update
+
+#security
+rsa.private-key=classpath:certs/private.pem
+rsa.public-key=classpath:certs/public.pem
