--- a/User-Backend/src/test/resources/application.properties
+++ b/User-Backend/src/test/resources/application.properties
@@ -3,3 +3,7 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+#security
+rsa.private-key=classpath:certs/private.pem
+rsa.public-key=classpath:certs/public.pem
