--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,3 +23,8 @@ services:
     environment:
       - SPRING_DATASOURCE_URL=jdbc:mysql://mysql:3306/userdatabase?useSSL=false
       - SPRING_DATASOURCE_HIKARI_INITIALIZATION-FAIL-TIMEOUT=0
+  ns-frontend:
+    image: jesseleppens/ns-frontend:latest
+    container_name: ns-frontend
+    ports:
+      - "4200:80"
