--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,8 +1,7 @@
 name: Build
 on:
   push:
-    branches:
-      - master # or the name of your main branch
+    branches: [ "main" ] # or the name of your main branch
 
 jobs:
   build:
@@ -12,10 +11,10 @@ jobs:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
-      - name: Set up JDK 11
+      - name: Set up JDK 19
         uses: actions/setup-java@v1
         with:
-          java-version: 11
+          java-version: 19
       - name: Cache SonarQube packages
         uses: actions/cache@v1
         with:
